[package]
name = "sumdiff"
version = "0.1.0"
edition = "2021"
authors = ["Luke Sandberg <lukeisandberg@gmail.com>"]


[lib]
name="sumdifflib"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "sumdiff"
path = "src/main.rs"

[dependencies]


[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
rand = "0.8.5"

[[bench]]
name = "eytzinger_benches"
harness = false
