[package]
name = "sumdiff"
version = "0.1.0"
edition = "2021"
authors = ["Luke Sandberg <lukeisandberg@gmail.com>"]


[lib]
name="sumdifflib"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "sumdiff"
path = "src/main.rs"

[dependencies]
chrono = "0.4"
assume = "0.5"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dev-dependencies]
assert_cmd = "2.0.14"
assert_fs = "1.1.1"
criterion = { version = "0.4", features = ["html_reports"] }
predicates = "3.1.0"
rand = "0.8.5"
quickcheck = "1"
quickcheck_macros = "1"

[[bench]]
name = "eytzinger_benches"
harness = false

[[bench]]
name = "lcs_benches"
harness = false

